# ai-ml-learning-roadmap

./: .gitignore  AI_ROADMAP.md  PROJECT_TEMPLATE.md  README.md
soccer_match_predictor/: .env.example  .gitignore  DATA_SOURCE_MAPPING.md  Dockerfile  FEATURE_DESIGN.md  LEARNING_LOG.md  Makefile  OPERATIONAL_DESIGN.md  README.md  SUPABASE_SETUP.md  TODO.md  UNIFIED_DATA_STRATEGY.md  api_usage_calculator.py  database_schema.sql  demo_unified_client.py  docker-compose.yml  enhanced_espn_demo.py  espn_api_discovery_report.md  pyproject.toml  requirements.txt  setup.sh  streamlit_app.py  test_api_football.py  test_data_explorer.py  test_database_integration.py  test_predictor.py  test_unified_with_data.py
soccer_match_predictor/src/: main.py
soccer_match_predictor/src/data/: database.py  espn_client.py  fbref_scraper.py  unified_client.py
soccer_match_predictor/src/models/: feature_engineering.py  performance_analyzer.py  predictor.py
soccer_match_predictor/tests/: test_data.py  test_models.py  test_utils.py
