[tool.poetry]
name = "soccer-match-predictor"
version = "0.1.0"
description = "ML-powered soccer match outcome predictor for Premier League and MLS with detailed learning explanations"
authors = ["Seth Williams"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
xgboost = "^1.7.0"
requests = "^2.31.0"
streamlit = "^1.28.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.17.0"
shap = "^0.42.0"
beautifulsoup4 = "^4.12.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
jupyter = "^1.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"